comprehensive list of changes in each version of the driver and the
`releases page in Jira
<https://jira.mongodb.org/projects/RUBY?selectedItem=com.atlassian.jira.jira-projects-plugin%3Arelease-page&status=released>`_
for the complete list of changes, including those internal to the driver and
its test suite.


.. _release-notes-2.20:

2.20
====

This release includes the following new features:

- Support for Ruby 2.5 and 2.6 has been discontinued. Support for Ruby 2.7 has
  been deprecated, and will be discontinued in the next minor driver version.
- Support for the newly-released Ruby-BSON version 5.0.
- Connection strings no longer require a slash between the hosts and the
  options. E.g., "mongodb://example.com?w=1" and "mongodb://example.com/?w=1"
  are both valid connection strings now.
- Container runtime and orchestration metadata for the client environment are
  now sent to the server for analytics purposes.

.. _release-notes-2.19:

2.19
====

This release of the Ruby driver supports MongoDB version 7.0. The Ruby driver
now supports Ruby 3.2. Ruby 2.5 and 2.6 are now deprecated.

This release includes the following new features:

- The driver now limits the number of connections established by a connection
  pool simultaneously. By default the limit is 2. The limit can be configured
  with the ``:max_connecting`` option of the ``Mongo::Client`` constructor.
  The default should be sufficient for most applications. However, if your
  application is using a large number of threads, you may need to increase
  the limit.
- Added support for automatic AWS credentials retrieval and authentication
  with temporary credentials when AWS KMS is used for client side encryption.
- Added support for automatic GCP credentials retrieval when Google Cloud Key
  Management is used for client side encryption.
- Added support the Azure VM-assigned Managed Identity for Automatic KMS Credentials
  when Azure Key Vault is used for client side encryption.