@@ -1,5 +1,5 @@
 # GENERATED FILE - DO NOT EDIT.
-# Run ./.evergreen/update-evergreen-configs to regenerate this file.
+# Run `rake eg` to regenerate this file.
 
 # When a task that used to pass starts to fail, go through all versions that
 # may have been skipped to detect when the task started failing.
@@ -1279,9 +1279,6 @@ buildvariants:
     tasks:
       - name: "test-mlaunch"
 
-  # Only JRuby-9.4 is built for arm in the current toolchain, but 9.4 has other
-  # issues. Either we fix those issues, or we build 9.3 for arm in the toolchain,
-  # and hope it fixes the issues... Until then, we can only test MRI ruby on arm.
   - matrix_name: "mongo-recent-arm"
     matrix_spec:
       ruby: "ruby-3.2"
